--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/src/server.js",
     "build": "tsc",
-    "dev": "nodemon src/server.ts"
+    "postbuild": "cp credencial-firebase.json dist && cp package.json dist/package.json && cd dist && npm install --only=production",
+    "dev": "nodemon src/server"
   },
   "keywords": [],
   "author": "",
